Move to autodiff uncertainties in predictions

--- a/examples/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
+++ b/examples/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
@@ -255,8 +255,8 @@
     }
    ],
    "source": [
-    "VolumeWrapper.from_save('save.pt', volume=volume, res_opt=partial(torch.optim.SGD, lr=2e1), eff_opt=partial(torch.optim.SGD, lr=2e-5),\n",
-    "                        loss_func=DetectorLoss(cost_coef=0.025))"
+    "VolumeWrapper.from_save('save.pt', volume=volume, res_opt=partial(torch.optim.SGD, lr=2e9), eff_opt=partial(torch.optim.SGD, lr=2e4),\n",
+    "                        loss_func=DetectorLoss(cost_coef=None))"
    ]
   },
   {
