--- a/examples/00_Hello_World.ipynb
+++ b/examples/00_Hello_World.ipynb
@@ -245,9 +245,9 @@
    "outputs": [],
    "source": [
     "wrapper = VolumeWrapper(volume,\n",
-    "                        res_opt=partial(torch.optim.SGD, lr=2e1),  # Scale of resolution is large, so use high LR\n",
-    "                        eff_opt=partial(torch.optim.SGD, lr=2e-5),  # Scale of efficiency is [0,1] so use small LR\n",
-    "                        loss_func=DetectorLoss(0.025))  # Loss is precision + cost_coef*detector cost, balance as required"
+    "                        res_opt=partial(torch.optim.SGD, lr=2e9),  # Scale of resolution is large, so use high LR\n",
+    "                        eff_opt=partial(torch.optim.SGD, lr=2e5),  # Scale of efficiency is [0,1] so use smaller LR\n",
+    "                        loss_func=DetectorLoss(cost_coef=None))  # Loss is precision + cost_coef*detector cost, balance coef as required or leave as None to automatically balance on first batch"
    ]
   },
   {
