--- a/dev/generalised_scatter.ipynb
+++ b/dev/generalised_scatter.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,8 +158,10 @@
     "        xy_star = (mean_xy-((mean_z*mean_xy_z)/mean_z2))/(1-(mean_z.square()/mean_z2))\n",
     "        angles = (mean_xy_z-(xy_star*mean_z))/mean_z2\n",
     "        \n",
-    "        calc_xyz = lambda z: torch.cat([xy_star+(angles*z), z], dim=-1)\n",
-    "        return calc_xyz(hits[:,1,2:3])-calc_xyz(hits[:,0,2:3])\n",
+    "        def _calc_xyz(z: Tensor) -> Tensor:\n",
+    "            return torch.cat([xy_star + (angles * z), z], dim=-1)\n",
+    "\n",
+    "        return _calc_xyz(hits[:, 1, 2:3]) - _calc_xyz(hits[:, 0, 2:3])\n",
     "        \n",
     "    def compute_scatters(self) -> None:\n",
     "        r\"\"\"\n",
@@ -207,9 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([79, 2, 3])\n",
+      "torch.Size([79, 2]) torch.Size([79, 2]) torch.Size([79, 1])\n",
+      "torch.Size([79, 2]) torch.Size([79, 2]) torch.Size([79, 1])\n",
+      "torch.Size([79, 2, 3])\n",
+      "torch.Size([79, 2]) torch.Size([79, 2]) torch.Size([79, 1])\n",
+      "torch.Size([79, 2]) torch.Size([79, 2]) torch.Size([79, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "gsb = GenScatterBatch(muons, volume)"
    ]
