--- a/dev/generalised_detectors.ipynb
+++ b/dev/generalised_detectors.ipynb
@@ -3892,6 +3892,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 847,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred, pred_unc = x0inf.x0_from_dtheta()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 850,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.0063, 0.0018, 0.0080, 0.0017, 0.0013, 0.0173, 0.0050, 0.0054, 0.0263,\n",
+       "         0.0034], dtype=torch.float64, grad_fn=<SliceBackward>),\n",
+       " tensor([0.0078, 0.0011, 0.0132, 0.0011, 0.0009, 0.0352, 0.0057, 0.0066, 0.0667,\n",
+       "         0.0029], dtype=torch.float64, grad_fn=<SliceBackward>))"
+      ]
+     },
+     "execution_count": 850,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[:10], pred_unc[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 855,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-1.1452e-03, -1.7046e-04, -5.2704e-03, -2.4443e-05,  2.9417e-04,\n",
+       "         3.9506e-03,  7.3923e-04, -1.2405e-03,  8.1573e-03,  1.2532e-04,\n",
+       "         1.3462e-03,  1.1438e-03,  2.7104e-04, -4.5078e-04, -1.6570e-04,\n",
+       "        -1.1916e-04,  1.9084e-04,  7.5963e-04, -4.8000e-05,  4.4864e-04,\n",
+       "         3.2082e-03, -4.9976e-02, -4.0009e-05, -2.7144e-04, -2.1019e-04,\n",
+       "        -3.6760e-03,  5.6594e-05, -2.7925e-04,  3.9540e-04,  6.8194e-05,\n",
+       "         2.0467e-03,  2.4987e-04,  1.1453e-03, -5.5710e-05, -7.5554e-04,\n",
+       "         1.0036e-02, -2.6695e-04,  5.9799e-03, -6.5305e-04, -9.4464e-04,\n",
+       "         3.3963e-03,  3.9519e-03,  3.5645e-04,  3.3056e-03,  1.3156e-04,\n",
+       "         3.3941e-04], dtype=torch.float64, grad_fn=<SumBackward1>)"
+      ]
+     },
+     "execution_count": 855,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jacobian(pred_unc, volume.get_detectors()[0].panels[0].xyz, create_graph=True).sum(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 857,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-3.8457e-04, -5.5167e-05, -4.1545e-03, -1.1751e-04, -2.2207e-04,\n",
+       "        -2.0831e-03, -5.3886e-04, -5.7717e-04, -3.3028e-03, -2.3233e-05,\n",
+       "        -1.8323e-03, -7.1298e-04, -1.8529e-04, -2.3563e-04, -3.0361e-04,\n",
+       "        -1.5772e-05, -2.1124e-04, -3.1275e-04, -2.1585e-05, -3.5535e-04,\n",
+       "        -7.3358e-04, -1.7724e-02, -3.4186e-06, -9.5102e-05, -1.2776e-04,\n",
+       "        -1.2390e-03, -3.9881e-05, -2.3074e-04, -1.9718e-04, -3.9948e-05,\n",
+       "        -1.5171e-03, -2.1693e-04, -9.7418e-04, -3.7658e-05, -3.8765e-04,\n",
+       "        -4.8854e-03, -1.8049e-04, -2.3582e-03, -1.8782e-04, -9.2212e-04,\n",
+       "        -8.4561e-04, -3.9286e-03, -2.2563e-04, -3.2152e-03, -1.2433e-04,\n",
+       "        -2.6879e-04], grad_fn=<SumBackward1>)"
+      ]
+     },
+     "execution_count": 857,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jacobian(pred_unc, volume.get_detectors()[0].panels[0].xy_span, create_graph=True).sum(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# VolumeWrapper"
    ]
   },
