Bug fix in forwards pass, fix unitary matrices

--- a/dev/corrected_loss.ipynb
+++ b/dev/corrected_loss.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +98,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "volume = Volume(get_layers())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.])\n",
+      "tensor([0.9000])\n",
+      "tensor([0.8000])\n",
+      "tensor([0.7000])\n",
+      "tensor([0.6000])\n",
+      "tensor([0.5000])\n",
+      "tensor([0.4000])\n",
+      "tensor([0.3000])\n",
+      "tensor([0.2000])\n",
+      "tensor([0.1000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in volume: print(l.z)"
    ]
   },
   {
