No more nans test

--- a/dev/generalised_detectors-realistic_validation.ipynb
+++ b/dev/generalised_detectors-realistic_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-5-edc514db5f58>:4: UserWarning: Not providing a value for linspace's steps is deprecated and will throw a runtime error in a future release. This warning will appear only once per process. (Triggered internally at  ../aten/src/ATen/native/RangeFactories.cpp:23.)\n",
+      "  x = torch.linspace(-10, 100*100)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe4c276e730>]"
+       "[<matplotlib.lines.Line2D at 0x7fbf61db2670>]"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +134,7 @@
        "tensor([1.0000, 0.5353], grad_fn=<ProdBackward1>)"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +171,7 @@
     "        self.register_buffer('resolution', torch.tensor(float(res), requires_grad=True, device=self.device))\n",
     "        self.register_buffer('efficiency', torch.tensor(float(eff), requires_grad=True, device=self.device))\n",
     "        self.xy = nn.Parameter(torch.tensor(init_xyz[:2], device=self.device))\n",
-    "        self.z = nn.Parameter(torch.tensor(init_xyz[2], device=self.device))\n",
+    "        self.z = nn.Parameter(torch.tensor(init_xyz[2:3], device=self.device))\n",
     "        self.xy_span = nn.Parameter(torch.tensor(init_xy_span, device=self.device))\n",
     "        \n",
     "    def __repr__(self) -> str:\n",
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,12 +299,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "panels = nn.ModuleList([DetectorPanel(res=1e4, eff=0.5, init_xyz=[0.5,0.5,0.95], init_xy_span=[0.5,0.5], area_cost_func=area_cost),\n",
     "                        DetectorPanel(res=1e4, eff=0.5, init_xyz=[0.5,0.5,1.], init_xy_span=[0.5,0.5], area_cost_func=area_cost)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "panels[0].z.shape"
    ]
   },
   {
