--- a/dev/generalised_detectors-realistic_validation.ipynb
+++ b/dev/generalised_detectors-realistic_validation.ipynb
@@ -310,6 +310,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Normal(loc: torch.Size([2]), scale: torch.Size([2]))"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "panels[0].get_gauss()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
