Start panel examples

--- a/examples/voxel_detectors/00_Hello_World.ipynb
+++ b/examples/voxel_detectors/00_Hello_World.ipynb
@@ -23,6 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "## Volume setup\n",
     "The volume consists of both passive material to be imaged, and active detectors to record muons hits. We aim to adjust the resolution and efficiency of the detectors to minimise the cost of the detector whilst improving the precision of the imaging of the passive volume.\n",
     "\n",
@@ -223,9 +224,9 @@
     "## Optimisation\n",
     "\n",
     "Having built our detector and defined where the passive volumes will be, we now want to define the material composition of the passive volume(s) to be imaged, and to optimise our detector.\n",
-    "As its name suggests, `VolumeWrapper` wraps the `Volume` and provides methods to optimise the detector, predict passive volumes, loading and saving of detector configurations, etc.\n",
+    "As its name suggests, `VoxelVolumeWrapper` wraps the `Volume` and provides methods to optimise the detector, predict passive volumes, loading and saving of detector configurations, etc.\n",
     "\n",
-    "When building the wrapper, we need to supply it with optimiser definitions for both resolution and efficiency, and a loss function to optimise. Optimisers are the classes in PyTorch which implement gradient descent on specified parameters. For the optimisers, use partial definitions, since the `VolumeWrapper` takes care of instantiating the optimisers to relate to the relevant detector parameters."
+    "When building the wrapper, we need to supply it with optimiser definitions for both resolution and efficiency, and a loss function to optimise. Optimisers are the classes in PyTorch which implement gradient descent on specified parameters. For the optimisers, use partial definitions, since the `VoxelVolumeWrapper` takes care of instantiating the optimisers to relate to the relevant detector parameters."
    ]
   },
   {
@@ -282,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we may want to optimise the detector for multiple different passive volumes (or randomly generated volumes), different functions can be passed to the `VolumeWrapper` during optimisation by loading the functions into `PassiveYielder` objects, which loop through the passive volumes. In this tutorial, though, we only have one passive volume."
+    "Since we may want to optimise the detector for multiple different passive volumes (or randomly generated volumes), different functions can be passed to the `VoxelVolumeWrapper` during optimisation by loading the functions into `PassiveYielder` objects, which loop through the passive volumes. In this tutorial, though, we only have one passive volume."
    ]
   },
   {
@@ -424,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The initial resolution of each detector element was $1000 m^{-1}$ and the initial efficiencies were 0.5. From this we can see that the resolutions generally increase and the efficiencies decrease. Running for longer will produce a more prominent (and asymmetric) change in the four detector layers."
+    "The initial resolution of each detector element was $1000 m^{-1}$ and the initial efficiencies were 0.5. From this we can see that the resolutions and efficiencies generally increase. Running for longer will produce a more prominent (and asymmetric) change in the four detector layers."
    ]
   },
   {
