--- a/examples/panel_detectors/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
+++ b/examples/panel_detectors/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
@@ -80,7 +80,7 @@
    ],
    "source": [
     "def area_cost(x:Tensor) -> Tensor:\n",
-    "    return F.relu(x)**2\n",
+    "    return F.relu(x)\n",
     "\n",
     "x = torch.linspace(-1, 1)\n",
     "plt.plot(x, area_cost(x))"
