Add voxel and block random passives

--- a/examples/panel_detectors/00_Hello_World.ipynb
+++ b/examples/panel_detectors/00_Hello_World.ipynb
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def arb_rad_length(*,z:float, lw:Tensor, size:float) -> float:\n",
+    "def arb_rad_length(*,z:float, lw:Tensor, size:float) -> Tensor:\n",
     "    rad_length = torch.ones(list((lw/size).long()))*X0['beryllium']\n",
     "    if z >= 0.4 and z <= 0.5: rad_length[5:,5:] = X0['lead']\n",
     "    return rad_length"
