--- a/examples/panel_detectors/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
+++ b/examples/panel_detectors/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
@@ -395,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def arb_rad_length(*,z:float, lw:Tensor, size:float) -> float:\n",
+    "def arb_rad_length(*,z:float, lw:Tensor, size:float) -> Tensor:\n",
     "    rad_length = torch.ones(list((lw/size).long()))*X0['beryllium']\n",
     "    if z >= 0.4 and z <= 0.5: rad_length[5:,5:] = X0['lead']\n",
     "    return rad_length"
@@ -407,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def arb_rad_length2(*,z:float, lw:Tensor, size:float) -> float:\n",
+    "def arb_rad_length2(*,z:float, lw:Tensor, size:float) -> Tensor:\n",
     "    rad_length = torch.ones(list((lw/size).long()))*X0['beryllium']\n",
     "    if z >= 0.4 and z <= 0.5: rad_length[5:,5:] = X0['copper']\n",
     "    return rad_length"
