--- a/dev/randomised_passives.ipynb
+++ b/dev/randomised_passives.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,13 +212,14 @@
     "        def generator(*, z:float, lw:Tensor, size:float) -> Tensor:\n",
     "            x0s = lw.new_tensor([X0[m] for m in self.materials])\n",
     "            shp = (lw/size).long()\n",
-    "            return x0s[torch.randint(high=len(x0s), size=(shp.prod(),), device=x0s.device)].reshape(list(shp))\n",
+    "            print(shp.prod().numpy())\n",
+    "            return x0s[torch.randint(high=len(x0s), size=(shp.prod().numpy(),), device=x0s.device)].reshape(list(shp))\n",
     "        return generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,35 +228,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "tensor([[0.0176, 0.0890, 0.0937, 0.0176, 0.0056, 0.1932, 0.0937, 0.0144, 0.0937,\n",
+       "tensor([[0.0890, 0.0056, 0.0890, 0.1932, 0.0144, 0.0144, 0.0144, 0.0144, 0.0890,\n",
        "         0.0890],\n",
-       "        [0.0144, 0.0890, 0.1932, 0.0056, 0.0176, 0.1932, 0.0176, 0.3528, 0.1932,\n",
+       "        [0.0176, 0.0176, 0.1932, 0.0144, 0.1932, 0.0937, 0.3528, 0.0890, 0.0937,\n",
+       "         0.3528],\n",
+       "        [0.0176, 0.0056, 0.0144, 0.1932, 0.0937, 0.0056, 0.0937, 0.0937, 0.3528,\n",
+       "         0.0144],\n",
+       "        [0.0890, 0.0890, 0.0937, 0.0890, 0.0937, 0.1932, 0.0144, 0.0176, 0.0144,\n",
        "         0.0176],\n",
-       "        [0.3528, 0.0176, 0.0890, 0.0144, 0.0890, 0.0144, 0.0144, 0.0176, 0.0056,\n",
+       "        [0.3528, 0.0056, 0.0056, 0.3528, 0.0176, 0.0937, 0.0937, 0.0890, 0.0176,\n",
+       "         0.0890],\n",
+       "        [0.0937, 0.0144, 0.0144, 0.0937, 0.3528, 0.0056, 0.0056, 0.0890, 0.0144,\n",
+       "         0.0937],\n",
+       "        [0.3528, 0.0890, 0.0890, 0.1932, 0.0937, 0.1932, 0.0176, 0.3528, 0.0937,\n",
        "         0.0056],\n",
-       "        [0.0937, 0.0176, 0.0144, 0.1932, 0.0144, 0.3528, 0.3528, 0.0056, 0.0890,\n",
-       "         0.0056],\n",
-       "        [0.3528, 0.3528, 0.3528, 0.3528, 0.0144, 0.1932, 0.0056, 0.0056, 0.3528,\n",
+       "        [0.0890, 0.0176, 0.1932, 0.0176, 0.0890, 0.0890, 0.0056, 0.3528, 0.1932,\n",
+       "         0.1932],\n",
+       "        [0.3528, 0.0890, 0.0890, 0.3528, 0.1932, 0.3528, 0.0056, 0.0176, 0.0144,\n",
        "         0.3528],\n",
-       "        [0.0937, 0.3528, 0.0937, 0.0176, 0.0056, 0.0176, 0.3528, 0.1932, 0.0890,\n",
-       "         0.0176],\n",
-       "        [0.1932, 0.0890, 0.0176, 0.0176, 0.0937, 0.0176, 0.0056, 0.0056, 0.1932,\n",
-       "         0.3528],\n",
-       "        [0.0144, 0.1932, 0.0056, 0.0176, 0.0056, 0.0056, 0.0890, 0.0144, 0.0144,\n",
-       "         0.0176],\n",
-       "        [0.0890, 0.0144, 0.1932, 0.0176, 0.0056, 0.0144, 0.0056, 0.0144, 0.0056,\n",
-       "         0.3528],\n",
-       "        [0.0144, 0.0937, 0.0144, 0.0176, 0.0890, 0.3528, 0.0890, 0.0890, 0.0144,\n",
-       "         0.0937]])"
+       "        [0.0176, 0.1932, 0.0937, 0.0937, 0.1932, 0.0890, 0.0890, 0.0056, 0.0144,\n",
+       "         0.0176]])"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
