--- a/examples/voxel_detectors/01_Indepth_tutorial_single_cycle.ipynb
+++ b/examples/voxel_detectors/01_Indepth_tutorial_single_cycle.ipynb
@@ -3542,7 +3542,7 @@
     }
    ],
    "source": [
-    "muons.get_hits(lw=Tensor([1,1]))"
+    "muons.get_hits((0,0), (1,1))"
    ]
   },
   {
@@ -4116,7 +4116,7 @@
     }
    ],
    "source": [
-    "hits = muons.get_hits(volume.lw)\n",
+    "hits = muons.get_hits((0,0), volume.lw)\n",
     "hits"
    ]
   },
