--- a/dev/scatter_DNN_random_vox_reg.ipynb
+++ b/dev/scatter_DNN_random_vox_reg.ipynb
@@ -572,7 +572,7 @@
     "            data = torch.cat((sb.dtheta, sb.dxy, sb.location, pred[:,None]), dim=-1).detach()\n",
     "            data = data[None,:].repeat_interleave(len(self.voxel_centres), dim=0)\n",
     "            inputs.append(torch.cat((data, self.voxel_centres), -1))\n",
-    "            targets.append(self.volume.get_rad_cube().flatten())c\n",
+    "            targets.append(self.volume.get_rad_cube().flatten())\n",
     "        \n",
     "        inputs = torch.cat(inputs, dim=0).detach().cpu().numpy()\n",
     "        return {'inputs':(np.zeros((len(inputs),0)),inputs),'targets':torch.cat(targets, dim=0).detach().cpu().numpy()[:,None]}\n",
