--- a/dev/double_GNN_x0_net_block_material_rand-pos.ipynb
+++ b/dev/double_GNN_x0_net_block_material_rand-pos.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f46acce9c40>]"
+       "[<matplotlib.lines.Line2D at 0x7f048b0b9d00>]"
       ]
      },
      "execution_count": 4,
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -210,17 +210,17 @@
       "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
       "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
       "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
-      "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528]]) 4\n",
+      "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528]]) 5\n",
       "tensor([[0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
       "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
-      "        [0.0176, 0.0176, 0.3528, 0.3528, 0.3528],\n",
-      "        [0.0176, 0.0176, 0.3528, 0.3528, 0.3528],\n",
-      "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528]]) 4\n",
+      "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
+      "        [0.3528, 0.0144, 0.0144, 0.3528, 0.3528],\n",
+      "        [0.3528, 0.0144, 0.0144, 0.3528, 0.3528]]) 5\n",
       "tensor([[0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
       "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
-      "        [0.0176, 0.0176, 0.3528, 0.3528, 0.3528],\n",
-      "        [0.0176, 0.0176, 0.3528, 0.3528, 0.3528],\n",
-      "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528]]) 4\n"
+      "        [0.3528, 0.3528, 0.3528, 0.3528, 0.3528],\n",
+      "        [0.3528, 0.0144, 0.0144, 0.3528, 0.3528],\n",
+      "        [0.3528, 0.0144, 0.0144, 0.3528, 0.3528]]) 5\n"
      ]
     }
    ],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "75"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "((160, 75, 100, 9), (160, 1))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,42 +386,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.19590005, 0.22562557, 0.2871375 , 0.2878283 , 0.29124853,\n",
-       "       0.36042544, 0.36840042, 0.3709995 , 0.42002413, 0.4269969 ,\n",
-       "       0.42763287, 0.44086623, 0.44370258, 0.44385275, 0.4493296 ,\n",
-       "       0.44986632, 0.4529671 , 0.45322162, 0.4568718 , 0.46285063,\n",
-       "       0.49305725, 0.5025087 , 0.5058801 , 0.5452265 , 0.5507166 ,\n",
-       "       0.5567707 , 0.55796206, 0.55874765, 0.5720616 , 0.5884823 ,\n",
-       "       0.589033  , 0.5956292 , 0.5997994 , 0.60926557, 0.6097466 ,\n",
-       "       0.61452895, 0.6198385 , 0.63482744, 0.6370706 , 0.6446713 ,\n",
-       "       0.64527416, 0.64576393, 0.65166324, 0.6600917 , 0.66517913,\n",
-       "       0.67792964, 0.6803361 , 0.68448263, 0.68736815, 0.6965058 ,\n",
-       "       0.69921726, 0.7019128 , 0.7213528 , 0.73429394, 0.74790555,\n",
-       "       0.76288146, 0.765981  , 0.7673265 , 0.7688775 , 0.7733159 ,\n",
-       "       0.79122126, 0.8039709 , 0.8076111 , 0.81343246, 0.82508427,\n",
-       "       0.8280665 , 0.82810277, 0.8418415 , 0.84204245, 0.8431017 ,\n",
-       "       0.8477541 , 0.8534488 , 0.8573298 , 0.86098135, 0.8972399 ,\n",
-       "       0.8995153 , 0.9040565 , 0.91101694, 0.91429853, 0.91973096,\n",
-       "       0.93257725, 0.9332532 , 0.9511339 , 0.9620383 , 0.9817426 ,\n",
-       "       0.9827679 , 0.998509  , 1.0086372 , 1.0103612 , 1.0157042 ,\n",
-       "       1.0343099 , 1.0550702 , 1.0706763 , 1.0902213 , 1.1086384 ,\n",
-       "       1.1276335 , 1.1379889 , 1.218746  , 1.3272195 , 1.329331  ],\n",
-       "      dtype=float32)"
+       "array([[ 2.4432912e-03,  2.3559900e-03,  1.3269216e-03,  1.3850682e-03,\n",
+       "         2.5772092e-01, -1.8626153e-02, -3.4853905e-02,  1.0381379e-01,\n",
+       "         1.1108119e-01],\n",
+       "       [ 7.2847307e-04,  4.9155764e-03, -8.7929214e-04,  1.3235099e-04,\n",
+       "         1.2093502e-01,  3.0074477e-02, -2.3665160e-02,  1.3539159e-01,\n",
+       "         1.4069612e-01],\n",
+       "       [ 1.6551018e-03,  9.0632588e-04,  2.1746942e-04,  3.9519821e-04,\n",
+       "         8.3801270e-01, -5.3501412e-02,  2.8754762e-01, -2.6166581e-02,\n",
+       "         2.9365069e-01]], dtype=float32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fold['inputs'][1][0,0,:,-1]"
+    "fold['inputs'][1][0,0,0:3]"
    ]
   },
   {
