Unit test + class file

--- a/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
+++ b/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
@@ -7528,7 +7528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tomopt]",
+   "display_name": "Python [conda env:tomopt] *",
    "language": "python",
    "name": "conda-env-tomopt-py"
   },
