multiplicative weights, add optimiser warmup, fix infs in trajectory fitting

--- a/dev/bm1_gnn.ipynb
+++ b/dev/bm1_gnn.ipynb
@@ -60,7 +60,7 @@
     "            size=size,\n",
     "            panels=[\n",
     "                DetectorPanel(\n",
-    "                    res=1e3, eff=1, init_xyz=(0.5, 0.5, 1 - (i * (size) / n_panels)), init_xy_span=(1.0, 1.0), area_cost_func=area_cost, device=device\n",
+    "                    res=1e3, eff=1, init_xyz=(lwh[0].item()/2, lwh[1].item()/2, lwh[2].item() - (i * (size) / n_panels)), init_xy_span=(lwh[0].item(), lwh[1].item()), area_cost_func=area_cost, device=device\n",
     "                )\n",
     "                for i in range(n_panels)\n",
     "            ],\n",
@@ -76,7 +76,7 @@
     "            size=size,\n",
     "            panels=[\n",
     "                DetectorPanel(\n",
-    "                    res=1e3, eff=1, init_xyz=(0.5, 0.5, 0.2 - (i * (size) / n_panels)), init_xy_span=(1.0, 1.0), area_cost_func=area_cost, device=device\n",
+    "                    res=1e3, eff=1, init_xyz=(lwh[0].item()/2, lwh[1].item()/2, size - (i * (size) / n_panels)), init_xy_span=(lwh[0].item(), lwh[1].item()), area_cost_func=area_cost, device=device\n",
     "                )\n",
     "                for i in range(n_panels)\n",
     "            ],\n",
