feat: Added different (stricter) cost function to dev notebook tomopt_heatmapdet.ipynb

--- a/dev/tomopt_heatmapdet.ipynb
+++ b/dev/tomopt_heatmapdet.ipynb
@@ -35,13 +35,15 @@
     "from tomopt.core import X0\n",
     "from tomopt.optimisation import PassiveYielder\n",
     "from tomopt.optimisation import NoMoreNaNs, PanelMetricLogger, CostCoefWarmup\n",
+    "from tomopt.plotting import plot_pred_true_x0\n",
     "\n",
     "DEVICE = torch.device('cpu')\n",
     "def area_cost(x:Tensor) -> Tensor:\n",
-    "    return F.relu(x)\n",
+    "    return (F.relu(x) / 0.5) ** 2\n",
     "\n",
     "x = torch.linspace(-1, 1, 100)\n",
     "plt.plot(x, area_cost(x))\n",
+    "plt.plot(x, F.relu(x))\n",
     "\n",
     "# def arb_rad_length(*, z:float, lw:Tensor, size:float) -> Tensor:\n",
     "#     rad_length = torch.ones(list((lw/size).long()))*X0['beryllium']\n",
@@ -73,7 +75,7 @@
     "    # set detectors above volume\n",
     "    panels_up = [\n",
     "        DetectorHeatMap(\n",
-    "            init_xyz=[-0.5, -0.5, 1 - (i*(2*size)/n_panels)],\n",
+    "            init_xyz=[0., 0., 1 - (i*(2*size)/n_panels)],\n",
     "            init_xy_span=[-0.5, 0.5],\n",
     "            area_cost_func=area_cost,\n",
     "            device=DEVICE,\n",
@@ -85,7 +87,7 @@
     "    # set detectors below volume\n",
     "    panels_down = [\n",
     "        DetectorHeatMap(\n",
-    "            init_xyz=[-0.5, -0.5, 0.2 - (i*(2*size)/n_panels)],\n",
+    "            init_xyz=[0.0, 0.0, 0.2 - (i*(2*size)/n_panels)],\n",
     "            init_xy_span=[-0.5, 0.5],\n",
     "            area_cost_func=area_cost,\n",
     "            device=DEVICE,\n",
@@ -157,12 +159,10 @@
    "outputs": [],
    "source": [
     "for p in volume:\n",
-    "    for d in p.panels:\n",
-    "        print(type(d))\n",
-    "        print(d)\n",
-    "        for par in d.named_parameters():\n",
-    "            print(par)\n",
-    "    break"
+    "    if isinstance(p, PanelDetectorLayer):\n",
+    "        for d in p.panels:\n",
+    "            print(type(d))\n",
+    "            print(d)"
    ]
   },
   {
@@ -174,7 +174,7 @@
    "outputs": [],
    "source": [
     "_ = wrapper.fit(\n",
-    "    n_epochs=50,\n",
+    "    n_epochs=140,\n",
     "    passive_bs=1,\n",
     "    n_mu_per_volume=1000,\n",
     "    mu_bs=1000,\n",
@@ -193,13 +193,12 @@
    "outputs": [],
    "source": [
     "for p in volume:\n",
-    "    \n",
     "    if isinstance(p, PanelDetectorLayer):\n",
     "        for d in p.panels:\n",
     "            print(type(d))\n",
     "            print(d)\n",
-    "            for par in d.named_parameters():\n",
-    "                print(par)"
+    "#             for par in d.named_parameters():\n",
+    "#                 print(par)"
    ]
   },
   {
@@ -210,16 +209,7 @@
    "source": [
     "preds = wrapper.predict(passives,\n",
     "                        n_mu_per_volume=10000,\n",
-    "                        mu_bs=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tomopt.plotting import plot_pred_true_x0"
+    "                        mu_bs=2500)"
    ]
   },
   {
