--- a/dev/tomopt_heatmapdet.ipynb
+++ b/dev/tomopt_heatmapdet.ipynb
@@ -142,11 +142,14 @@
    "source": [
     "volume = Volume(get_layers())\n",
     "print(volume.get_cost())\n",
-    "wrapper = HeatMapVolumeWrapper(volume,\n",
-    "                             mu_opt=partial(torch.optim.SGD, lr=1e5),\n",
-    "                             norm_opt=partial(torch.optim.SGD, lr=1e5),\n",
-    "                             sig_opt=partial(torch.optim.SGD, lr=1e4),\n",
-    "                             loss_func=VoxelX0Loss(target_budget=4, cost_coef=None))  # Loss is precision + budget_coef*cost_coef, balance coef as required or leave as None to automatically balance on first batch\n",
+    "wrapper = HeatMapVolumeWrapper(\n",
+    "    volume,\n",
+    "    mu_opt=partial(torch.optim.SGD, lr=1e5),\n",
+    "    norm_opt=partial(torch.optim.SGD, lr=1e5),\n",
+    "    sig_opt=partial(torch.optim.SGD, lr=1e4),\n",
+    "    loss_func=VoxelX0Loss(target_budget=4, cost_coef=None),\n",
+    ") \n",
+    "# Loss is precision + budget_coef*cost_coef, balance coef as required or leave as None to automatically balance on first batch\n",
     "passives = PassiveYielder([arb_rad_length])"
    ]
   },
@@ -161,8 +164,8 @@
     "for p in volume:\n",
     "    if isinstance(p, PanelDetectorLayer):\n",
     "        for d in p.panels:\n",
-    "            print(type(d))\n",
-    "            print(d)"
+    "            print(d)\n",
+    "            d.plot_map()"
    ]
   },
   {
@@ -180,7 +183,7 @@
     "    mu_bs=1000,\n",
     "    trn_passives=passives,\n",
     "    val_passives=passives,\n",
-    "    cbs=[CostCoefWarmup(n_warmup=5), NoMoreNaNs(), PanelMetricLogger()],\n",
+    "    cbs=[CostCoefWarmup(n_warmup=1), NoMoreNaNs(), PanelMetricLogger()],\n",
     ")"
    ]
   },
@@ -195,10 +198,8 @@
     "for p in volume:\n",
     "    if isinstance(p, PanelDetectorLayer):\n",
     "        for d in p.panels:\n",
-    "            print(type(d))\n",
     "            print(d)\n",
-    "#             for par in d.named_parameters():\n",
-    "#                 print(par)"
+    "            d.plot_map()"
    ]
   },
   {
@@ -207,18 +208,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = wrapper.predict(passives,\n",
-    "                        n_mu_per_volume=10000,\n",
-    "                        mu_bs=2500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_pred_true_x0(*preds[0])"
+    "preds = wrapper.predict(\n",
+    "    passives,\n",
+    "    n_mu_per_volume=10000,\n",
+    "    mu_bs=2500,# 2500\n",
+    ")"
    ]
   },
   {
@@ -230,7 +224,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "plot_pred_true_x0(*preds[0])"
+   ]
   }
  ],
  "metadata": {
