--- a/examples/panel_detectors/00_Hello_World.ipynb
+++ b/examples/panel_detectors/00_Hello_World.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9b1d541c40>]"
+       "[<matplotlib.lines.Line2D at 0x7fd9643f7d00>]"
       ]
      },
      "execution_count": 5,
