Fix phi calculation

--- a/tests/Imaging_test.ipynb
+++ b/tests/Imaging_test.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc27a643c70>]"
+       "[<matplotlib.lines.Line2D at 0x7fcbe7736c40>]"
       ]
      },
      "execution_count": 5,
@@ -244,12 +244,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [],
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='0' class='' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      0.00% [0/1 00:00<00:00]\n",
+       "    </div>\n",
+       "    \n",
+       "\n",
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='8' class='' max='100' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      8.00% [8/100 00:03<00:38]\n",
+       "    </div>\n",
+       "    "
+      ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
@@ -275,11 +313,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tomopt.plotting import plot_pred_true_x0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_pred_true_x0(*preds[0])"
    ]
   },
   {
